<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/space_20dp"
        android:background="@drawable/border_common_dialog"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_16dp"
        android:paddingTop="@dimen/space_27dp"
        android:paddingEnd="@dimen/space_16dp"
        android:paddingBottom="@dimen/space_27dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorTextView"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            tools:text="admob_contract_202110062204.zip" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            android:gravity="center_vertical"
            android:text="@string/enter_password_continue"
            android:textColor="@color/colorTextView"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_box"
            android:layout_marginTop="@dimen/space_14dp"
            android:background="@drawable/border_box_dialog"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp"
            android:textColor="@color/colorTextView"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24dp"
            android:text="@string/wrong_password"
            android:textColor="@color/colorBaseRed"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/border_cancel"
                android:gravity="center"
                android:paddingStart="@dimen/space_15dp"
                android:paddingTop="@dimen/space_20dp"
                android:paddingEnd="@dimen/space_15dp"
                android:paddingBottom="@dimen/space_20dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnInputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_32dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_app"
                android:enabled="false"
                android:gravity="center"
                android:paddingStart="@dimen/space_15dp"
                android:paddingTop="@dimen/space_20dp"
                android:paddingEnd="@dimen/space_15dp"
                android:paddingBottom="@dimen/space_20dp"
                android:text="@string/text_input_pass"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
